hphp/hack/test/typecheck/class_consts/missing_type.php.exp
File "missing_type.php", line 4, characters 18-18:
Please add a type hint (Naming[2035])
