hphp/hack/test/typecheck/class_consts/missing_type.php
<?hh

abstract class A {
  abstract const X;
  const Y = 4;
}
